syntax = "proto3";
package accounts;

import "contracts/finance/accounts/v1/transaction.proto";

option go_package = "github.com/bar-raisers/intention/contracts/finance/accounts/v1";

service AccountsService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}
