syntax = "proto3";
package accounts;
option go_package = "github.com/bar-raisers/intention/finance/contracts/accounts/v1";

import "models/finance/transaction.proto";

message CreateTransactionRequest {
  models.Transaction transaction = 1;
}

message CreateTransactionResponse {}

message ListTransactionsRequest {}

message ListTransactionsResponse {
  repeated models.Transaction transactions = 1;
}
